# pptforge

./: AGENTS.md  README.md  main.py  pyproject.toml
docs/: AGENT_GUIDE.md  CHANGE-001-metadata-simplification.md  CHANGE-002-source-expression-syntax.md  CHANGES.md  DESIGN.md  FEATURES.md  OOXML_REFERENCE.md  TASKS.md
docs/archive/: PART_GRAPH_COPIER.md
src/pptforge/: cli.py  config.py  constants.py  extractor.py  layout_manager.py  media.py  merger.py  models.py  part_graph.py  validator.py
tests/: test_config.py  test_extractor.py  test_media.py  test_merger_basic.py  test_merger_layout.py  test_merger_media.py  test_part_graph.py  test_validator.py
tests/fixtures/: dup_images.pptx  generate_fixtures.py  master_a.pptx  master_b.pptx  proposal_test.yaml  simple.pptx  with_images.pptx  with_metadata.pptx
